tests/NormalTests/paczka1/fuzzy1/75567746.err
Error in line 3: LVumqD4rRuz A810 60,3
Error in line 6: LVumqD4rRuz S288 92,0
Error in line 12: Sohdzr A810 83,8
Error in line 7: PTPPNs S288 42,1
Error in line 33: Sohdzr S794 82,51
Error in line 31: 5JxzF3 S826 305,6
Error in line 27: Sohdzr S288 90,5
Error in line 30: PTPPNs S794 66,7
Error in line 38: Sohdzr S794 295,6
